  file at the beginning of the generated file.


- uic


- uic3


- qmake

* QMAKE_MOC_OPTIONS variable is now available for passing additional parameters
  to the moc.


- configure


- qtconfig


****************************************************************************
*                          Plugins                                         *
****************************************************************************
- The text codecs that were previously plugins are now built into QtCore.

****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************

- QPointer

   * QPointer itself is now deprecated, and the implementation of QPointer
     has been changed to use QWeakPointer. The old guard mechanism has been
     removed. This causes two slight changes in behavior when using
     QPointer:

     * When using QPointer on a QWidget (or a subclass of QWidget), previously
     the QPointer would be cleared by the QWidget destructor. Now, the QPointer
     is cleared by the QObject destructor (since this is when QWeakPointers are
     cleared). Any QPointers tracking a widget will NOT be cleared before the
     QWidget destructor destroys the children for the widget being tracked.

     * When constructing a QSharedPointer to take ownership of an object after a
     QPointer is already tracking the object. Previously, the shared pointer
     construction would not be affected by the QPointer, but now that QPointer
     is implemented using QWeakPoiner, constructing the QSharedPointer will
     cause an abort().


- QMessageBox

     * The static function QMessageBox::question has changed the default argument
     for buttons. Before the default was to have an Ok button. That is changed
     to having a yes and a no button.